@@ -2,9 +2,10 @@
 
 = Changes =
 == Version 0.9.2 ==
-  * ImageCache now started as a service, it doesn't get killed anymore by the system
-  * ImageCache accessible from CategoryList, FeedList and FeedHeadlineList
+  * ImageCache now started as a service so it doesn't get killed anymore by the system
+  * ImageCache accessible in menu of CategoryList, FeedList and FeedHeadlineList
   * Added notification for running downloads, using a grey icon to indicate the difference
+  * Fixed DB-Problems which prevented efficient caching
 
 == Version 0.9.1 ==
   * New: Added possibility to send error-reports after a crash
